<resources>
    <string name="app_name">Coffee Shop</string>
    <string name="quantity">Quantity</string>
    <string name="submit">Order</string>L̥
    <string name="check_price">Total</string>
    <string name="value">0</string>
    <string name="price_value">$0.00</string>
    <string name="price">Price</string>
    <string name="order_label">Order Summary</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="thank_you">Thank You&#8230; </string>
    <string name="order_placed">Placing Order&#8230;</string>
    <string name="toppings">Toppings</string>
    <string name="topping_one">Whipped Cream</string>
    <string name="topping_two">Chocolate</string>
    <string name="enter_name_tag">Enter Your Name</string>
    <string name="name_tag">Name</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_order">Canceling Order</string>
    <string name="bottom_price_tag">Price :</string>
</resources>
